--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ os:
   - linux
   - osx
 julia:
-  - 0.5
   - nightly
 notifications:
   email: false
 # uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("CategoricalArrays"); Pkg.test("CategoricalArrays"; coverage=true)'
+script:
+  - julia -e 'Pkg.clone("https://github.com/JuliaData/Nulls.jl.git")'
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("CategoricalArrays"); Pkg.test("CategoricalArrays"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("CategoricalArrays")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
